--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="tooltip" style="opacity: 0;"></div>
   <div id="chart"></div>
-  <script type="module" src="/src/index.ts"></script>
+  <script type="module" src="index.ts"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" async></script>
 </body>
 
